// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> renders correctly 1`] = `
<div
  className="css-13n4620"
/>
`;

exports[`<Grid /> renders correctly with gutter 1`] = `
<div
  className="css-1nd4jt7"
/>
`;
